Added a few more recipe pages
Recipe pages with images for:
- Tinned Mackerel Sandwich
- Bruschetta
- Deviled Eggs

 recipes coming soon...

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 </head>
 <body>
     <h1>Recipes!</h1>
-    <a href="recipes/fried-chicken-sandwich-v1.html">Fried Chicken Sandwich</a>
+    <ul>
+        <li><a href="recipes/fried-chicken-sandwich-v1.html">Fried Chicken Sandwich</a></li>
+        <li><a href="recipes/tinned-mackerel-sandwich.html">Tinned Mackerel Sandwich</a></li>
+        <li><a href="recipes/bruschetta.html">Bruschetta</a></li>
+        <li><a href="recipes/deviled-eggs.html">Deviled Eggs</a></li>
+    </ul>
+    
 </body>
 </html>
