--- a/recipes/fried-chicken-sandwich-v1.html
+++ b/recipes/fried-chicken-sandwich-v1.html
@@ -5,7 +5,7 @@
     <title>Fried Chicken Sandwich</title>
 </head>
 <body>
-    <h1>I LOVE ME SOME FRIED CHICKEN</h1>
+    <h1>Fried Chicken Sandwich v1</h1>
     <a href="../index.html">Home</a>
     <img src="../images/fried-chicken-sandwich-v1.jpg" alt="Don't worry about if it's cooked all the way through..." height="500" width="500">
 </body>
