hotfix update path to fried chicken sandwich image

--- a/recipes/fried-chicken-sandwich-v1.html
+++ b/recipes/fried-chicken-sandwich-v1.html
@@ -7,6 +7,6 @@
 <body>
     <h1>Fried Chicken Sandwich v1</h1>
     <a href="../index.html">Home</a>
-    <img src="../images/fried-chicken-sandwich-v1.jpg" alt="Don't worry about if it's cooked all the way through..." height="500" width="500">
+    <img src="../images/fried-chicken-sandwich-v1.JPG" alt="Don't worry about if it's cooked all the way through..." height="500" width="500">
 </body>
 </html>
