--- a/recipes/bruschetta.html
+++ b/recipes/bruschetta.html
@@ -8,5 +8,6 @@
     <h1>Bruschetta</h1>
     <a href="../index.html">Home</a>
     <img src="../images/bruschetta.jpg" alt="With home-grown tomatoes!" height="500" width="500">
+    <p>Coming soon...</p>
 </body>
 </html>
