--- a/recipes/fried-chicken-sandwich-v1.html
+++ b/recipes/fried-chicken-sandwich-v1.html
@@ -8,5 +8,6 @@
     <h1>Fried Chicken Sandwich v1</h1>
     <a href="../index.html">Home</a>
     <img src="../images/fried-chicken-sandwich-v1.JPG" alt="Don't worry about if it's cooked all the way through..." height="500" width="500">
+    <p>Coming soon...</p>
 </body>
 </html>
