--- a/recipes/tinned-mackerel-sandwich.html
+++ b/recipes/tinned-mackerel-sandwich.html
@@ -8,5 +8,6 @@
     <h1>Tinned Mackerel Sandwich</h1>
     <a href="../index.html">Home</a>
     <img src="../images/tinned-mackerel-sandwich.jpg" alt="Does that bread have a massive hole in it?" height="500" width="500">
+    <p>Coming soon...</p>
 </body>
 </html>
